sources/event-scraper-test2/webhook-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    # gateway controller will use this label to match with it's own version
    # do not remove
    argo-events-gateway-version: v0.10
spec:
  type: "webhook"
  eventSource: "webhook-event-source"
  processorPort: "9330"
  eventProtocol:
    type: "HTTP"
    http:
      port: "9300"
  template:
    metadata:
      name: "webhook-gateway-http"
      labels:
        gateway-name: "webhook-gateway"
    spec:
      containers:
      - name: "gateway-client"
        image: "argoproj/gateway-client"
        command: ["/bin/gateway-client"]
      - name: "webhook-events"
        image: "argoproj/webhook-gateway"
        command: ["/bin/webhook-gateway"]
      serviceAccountName: "argo-events-sa"
  service:
    metadata:
      name: webhook-gateway-svc
    spec:
      selector:
        gateway-name: "webhook-gateway"
      ports:
      - name: example
        port: 12000
        targetPort: 12000
      - name: events-v0
        port: 13000
        targetPort: 13000
      - name: testing1
        port: 12002
        targetPort: 12002

  # What is this?
  watchers:
    sensors:
    - name: "webhook-sensor"
    - name: "events-v0"
    - name: "testing1"
