sources/event-scraper-test2/workflow-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workflow
  labels:
    app.kubernetes.io/name: workflow
    app.kubernetes.io/component: api
spec:
  rules:
  - host: workflow.codeformuenster.org
    http:
      paths:
      # argo-ui
      - path: /
        backend:
          serviceName: argo-ui
          servicePort: 80

      # for sensor/webhook-sensor and configmap/webhook-event-source
      - path: /example
        backend:
          serviceName: webhook-gateway-svc
          servicePort: 12000
      - path: /events-v0
        backend:
          serviceName: webhook-gateway-svc
          servicePort: 13000
      - path: /testing1
        backend:
          serviceName: webhook-gateway-svc
          servicePort: 12002
  tls:
  - hosts:
    - workflow.codeformuenster.org
    secretName: workflow-ingress-cert
